# meshum

./: .gitignore  .mcp.json  .tool-versions  AGENTS.md  AI-POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  committed.toml  compose.yaml  justfile
.claude/agents/: reviewer.md
.claude/rules/: ecto.md  elixir-test.md  elixir.md  phoenix-web.md  phoenix.md  rust.md
.github/cla/: check.sh  comment.md  gate.sh  sign.sh  signatures.json
.github/workflows/: cla-check.yml  cla.yml  daemon.yml  release.yml  server.yml
containers/keycloak/: example-realm-realm.json
daemon/: .editorconfig  AGENTS.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
daemon/crates/daemon/: Cargo.toml
daemon/tests/: add.rs
docs/: README.md  ai-context.md  architecture.md  control-plane.md  daemon-reconciliation.md  development.md  governance.md  identity.md  quality.md  vision.md
docs/legal/: README.md  ccla.md  icla.md
server/: .check.exs  .dialyzer_ignore.exs  .doctor.exs  AGENTS.md  README.md  mix.exs
server/apps/meshum/: .gitignore  README.md  mix.exs
server/apps/meshum/lib/: meshum.ex
server/apps/meshum/lib/meshum/: application.ex  mailer.ex  repo.ex
server/apps/meshum/priv/repo/: seeds.exs
server/apps/meshum/test/support/: data_case.ex
server/apps/meshum_gateway/: .gitignore  README.md  mix.exs
server/apps/meshum_gateway/lib/: meshum_gateway.ex
server/apps/meshum_gateway/lib/meshum_gateway/: application.ex  endpoint.ex  router.ex  telemetry.ex
server/apps/meshum_gateway/test/: test_helper.exs
server/apps/meshum_gateway/test/support/: conn_case.ex
server/apps/meshum_web/: .gitignore  .sobelow-skips  README.md  mix.exs
server/apps/meshum_web/assets/css/: app.css
server/apps/meshum_web/assets/js/: app.js
server/apps/meshum_web/lib/: meshum_web.ex
server/apps/meshum_web/lib/meshum_web/: application.ex  endpoint.ex  (+3 more)
server/apps/meshum_web/test/: test_helper.exs
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
(+65 files in other folders)
