[package]
name = "meshum_daemon"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.md"
readme = "README.md"
rust-version = "1.96.0"
publish = false
repository = "https://github.com/meshum/meshum"
authors = ["Wannes Gennar <wannes@elixus.be>"]

[dependencies]

# We create a separate profile called 'fast' that disables all optimisation in favour of faster compilation for use in CI.
[profile.fast]
inherits = "dev"
opt-level = 0
codegen-units = 256
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true